--- a/client/css/style.css
+++ b/client/css/style.css
@@ -5,8 +5,19 @@ body{
 img{
 	padding: 10px 30px 10px 30px;
 }
+
+h1{
+  	font-family: 'Open Sans', sans-serif;
+	font-size: 50px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	text-align: center;
+	color: #999;
+}
+
 div {
-	margin: 118px;
+	margin: 100px 0 0 220px;
 	border-style: dotted;
 	border-color: gray;
 	display: inline-block;
