--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,7 +3,8 @@ body{
 }
 
 img{
-	padding: 10px 30px 10px 30px;
+	padding: 10px 30px 10px 8px;
+  height: 100px;
 }
 
 h1{
@@ -13,13 +14,15 @@ h1{
 	font-variant: normal;
 	font-weight: 500;
 	text-align: center;
-	color: #999;
 }
 
+h1 img{
+	height: 100px;
+	padding: 0px;
+
+}
 div {
-	margin: 100px 0 0 220px;
-	border-style: dotted;
-	border-color: gray;
+	margin: 80px 0 0 280px;
 	display: inline-block;
 	padding: 50px;
 	height: 100px;
